--- a/topics/dailyadj/DESCRIPTION
+++ b/topics/dailyadj/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: dailyadj
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
-Authors@R: 
+Authors@R:
     person(given = "Christoph",
            family = "Sax",
            role = c("aut", "cre"),
@@ -14,6 +14,6 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.0.2
-Depends: 
-    dplyr,
+Depends:
+    tidyverse,
     tsbox
