--- a/topics/dailyadj/NAMESPACE
+++ b/topics/dailyadj/NAMESPACE
@@ -3,6 +3,7 @@
 export(plot_components)
 export(plot_final_series_dygraph)
 export(seas_auto.arima)
+export(seas_daily)
 export(seas_dsa)
 export(seas_dummy)
 export(seas_ets)
