--- a/topics/dailyadj/NAMESPACE
+++ b/topics/dailyadj/NAMESPACE
@@ -4,6 +4,7 @@ export(oos_eval)
 export(oos_evals)
 export(plot_components)
 export(plot_final_series_dygraph)
+export(scale_factor)
 export(seas_auto.arima)
 export(seas_daily)
 export(seas_dsa)
