--- a/topics/dailyadj/NAMESPACE
+++ b/topics/dailyadj/NAMESPACE
@@ -4,6 +4,7 @@ export(oos_eval)
 export(oos_evals)
 export(plot_components)
 export(plot_final_series_dygraph)
+export(plot_oos_evals)
 export(scale_factor)
 export(seas_auto.arima)
 export(seas_daily)
@@ -17,3 +18,4 @@ export(seas_naive)
 export(seas_prophet)
 export(seas_stlf)
 export(seas_tbats)
+export(summary_oos_evals)
