main functions in one file (so we can sync via mail)

--- a/topics/dailyadj/NAMESPACE
+++ b/topics/dailyadj/NAMESPACE
@@ -2,14 +2,14 @@
 
 export(oos_eval)
 export(oos_evals)
-export(plot_components)
-export(plot_final_series_dygraph)
 export(plot_oos_evals)
 export(scale_factor)
 export(seas_auto.arima)
+export(seas_components)
 export(seas_daily)
 export(seas_dsa)
 export(seas_dummy)
+export(seas_dygraph)
 export(seas_ets)
 export(seas_harmon)
 export(seas_naive)
@@ -17,3 +17,8 @@ export(seas_prophet)
 export(seas_stlf)
 export(seas_tbats)
 export(summary_oos_evals)
+import(cowplot)
+import(dplyr)
+import(ggplot2)
+import(tidyr)
+import(tsbox)
