--- a/quarto/_quarto.yml
+++ b/quarto/_quarto.yml
@@ -62,6 +62,7 @@ format:
     code-link: true
     include-in-header: "header.html"
     author-meta: "James Livsey and Christoph Sax"
+    callout-appearance: simple
 
   pdf:
     documentclass: scrreprt
