--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,14 +5,12 @@ project:
 book:
   title: "Seasonal Adjustment in R"
   reader-mode: true
-
+  downloads: [pdf]
   page-footer:
     left: |
       by James Livsey and Christoph Sax
     right: |
       Seasonal Adjustment in R
-  # cover-image: cover.png
-  # favicon: cover.png
   site-url: https://christophsax.github.io/seasonalbook.content
   repo-url: https://github.com/christophsax/seasonalbook.content
   repo-branch: main
@@ -63,6 +61,8 @@ format:
     include-in-header: "header.html"
     author-meta: "James Livsey and Christoph Sax"
     callout-appearance: simple
+
+  pdf: default
 
 editor: visual
 
