--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,7 +19,7 @@ book:
     - part: index.qmd
       chapters:
         - 10-introduction.qmd
-        - 11-minimal-example.qmd
+        - 11-getting-started.qmd
         - 12-how-to-use.qmd
 
     - part: 20-part-basics.qmd
